# RR32CanController

./: .clang-format  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  README.md  apply-clang.sh  classmaker.py  platformio.ini
.github/workflows/: main.yml  platformio.yaml  unittest.yml  wintest.yml
Hardware/: .gitignore  MaerklinStellpult.md
Hardware/Controller/: Controller-cache.lib  Controller.bak  Controller.kicad_pcb  Controller.kicad_pcb-bak  Controller.net  Controller.sch  fp-lib-table  sym-lib-table
Hardware/ControllerSMD/: Controller-cache.lib  Controller.bak  Controller.html  Controller.kicad_pcb  Controller.kicad_pcb-bak  Controller.net  Controller.pro  Controller.sch  Controller.xml  ControllerParts.bck  ControllerParts.dcm  ControllerParts.lib  D24V10F3.kicad_mod  ESP32-DEVKITV1.kicad_mod  SIP-5.kicad_mod  XM1584.kicad_mod  fp-lib-table  sym-lib-table
Hardware/ControllerTHT/: ControllerTHT-cache.lib  ControllerTHT.bak  ControllerTHT.kicad_pcb  ControllerTHT.kicad_pcb-bak  (+3 more)
include/: RR32Can_config.h
src/: ActionListProcessor.cpp  ActionListProcessor.h  ConsoleManager.cpp  ConsoleManager.h  DebouncedDualKey.h  Forwarder.h  TurnoutLookup.cpp  TurnoutTypes.h  _wificonfig.h  canManager.cpp  canManager.h  config.h  maerklin-can.cpp  maerklin-can.h  main.cpp  wifiManager.cpp  wifiManager.h
test/: BufferManagerTest.cpp  CrcTest.cpp  TextParserTest.cpp
test/sil/: CMakeLists.txt
test/sil/application/: MenuTest.cpp  MocksAndFixtures.h
test/sil/mocks/: Arduino.cpp  Arduino.h  RotaryEncoder.h  esp_console.h
(+223 files in other folders)
